# github-activity-report

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/github_activity_report/: github_models.py  main.py
